--- a/src/components/FriendList/Friends.module.css
+++ b/src/components/FriendList/Friends.module.css
@@ -1,3 +1,30 @@
 .item {
-    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    padding: 20px;
+    background-color: rgb(255, 205, 224);
+    margin-bottom: 10px;
+}
+.item:last-child {
+    margin-bottom: 0;
+}
+.name {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.18;
+    letter-spacing: 0.03em;
+    color: #000;
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+.friendList {
+    margin: 30px auto;
+    padding: 32px 16px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+                0px 1px 1px rgba(0, 0, 0, 0.14),
+                0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    max-width: 480px;
 }
