--- a/src/components/FriendList/Friends.module.css
+++ b/src/components/FriendList/Friends.module.css
@@ -1,4 +1,5 @@
 .item {
+    
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -27,4 +28,16 @@
                 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     max-width: 480px;
+}
+.status {
+    width: 30px;
+    height: 30px;
+    background-color: #000;
+    border-radius: 50%;
+}
+.true {
+    background-color: green;
+}
+.false {
+    background-color: red;
 }
