--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -19,6 +19,7 @@
     background-color: rgb(255, 205, 224);
 }
 .conteiner {
+    
     margin: 30px auto;
     padding: 32px 16px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -27,4 +28,16 @@
     border-radius: 0px 0px 4px 4px;
     max-width: 480px;
     
+    
+}
+.title {
+    text-align: center;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.18;
+    letter-spacing: 0.03em;
+    color: brown;
+    margin-top: 0;
+    margin-bottom: 10px;
+
 }
